# limerence

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_EN.md  netlify.toml  package-lock.json
.VSCodeCounter/2026-02-16_19-41-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.claude/: settings.local.json
.github/workflows/: pi-web-static-analysis.yml
config/: default_character.json
crates/limerence-ai/: Cargo.toml
crates/limerence-ai/src/: client.rs  lib.rs  stream.rs  types.rs
crates/limerence-core/: Cargo.toml
crates/limerence-core/src/: agent.rs  character.rs  config.rs  file_os.rs  lib.rs  memory.rs  notes.rs  session.rs  tool.rs
crates/limerence-tui/: Cargo.toml
crates/limerence-tui/src/: app.rs  input.rs  main.rs  ui.rs
legacy-web/: README.md  netlify.toml  package-lock.json  package.json  tsconfig.tsbuildinfo
legacy-web/src/: App.tsx
pi-web/: .env.example  README.md  index.html  netlify.toml  oxlintrc.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
pi-web/public/: supabase-schema.sql
pi-web/scripts/: check-loc.mjs
pi-web/src/: App.tsx  app-agent.ts  app-compaction.test.ts  app-compaction.ts  app-lifecycle.ts  app-message-actions.ts  app-render.ts  app-repair.ts  app-session.ts  app-state.ts  app-workspace.ts  app.css  main.ts  main.tsx  theme-transition.ts  vite-env.d.ts
web/: index.html  netlify.toml  tsconfig.tsbuildinfo
web/src/: index.css
角色卡示例/json/: 奥琪-魔20260205224838481.json
预设example/正则/: 正则三删除多余内容.json  正则二部分仅保留总结.json
(+171 files in other folders)
