[package]
name = "limerence-ai"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
