[package]
name = "limerence-core"
version.workspace = true
edition.workspace = true

[dependencies]
limerence-ai = { path = "../limerence-ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
toml = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
