[package]
name = "limerence-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "limerence"
path = "src/main.rs"

[dependencies]
limerence-core = { path = "../limerence-core" }
limerence-ai = { path = "../limerence-ai" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
